<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".SafetyContent.TipsInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background"
            tools:context=".Info.SafetyInfo">

            <TextView
                android:id="@+id/textsafe"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/btnbg"
                android:gravity="center"
                android:text="Cycling tips"
                android:textColor="@color/white"
                android:textSize="33sp"
                app:layout_constraintStart_toStartOf="parent" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/before_go"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/before_go"
                android:gravity="center"
                android:layout_below="@+id/textsafe"
                />

            <TextView
                android:id="@+id/info_go"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/before_go"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/popup_edittext_style"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/tips_1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/what_take"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/what_take"
                android:gravity="center"
                android:layout_below="@+id/info_go"
                />

            <TextView
                android:id="@+id/info_take"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/what_take"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/popup_edittext_style"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/tips_2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/where_go"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/where_go"
                android:gravity="center"
                android:layout_below="@+id/info_take"
                />

            <TextView
                android:id="@+id/info_where"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/where_go"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/popup_edittext_style"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/tips_3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/what_do"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/what_do"
                android:gravity="center"
                android:layout_below="@+id/info_where"
                />

            <TextView
                android:id="@+id/info_do"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/what_do"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/popup_edittext_style"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/tips_4"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/what_get"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/what_get"
                android:gravity="center"
                android:layout_below="@+id/info_do"
                />

            <TextView
                android:id="@+id/info_get"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/what_get"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/popup_edittext_style"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/tips_5"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>